feat: Screate authenticate
